2008-05-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-11
	* fix bug reported by JR regarding the diff gui dialog

2008-05-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-10
	* add additional checks for forbidden symbols in the configuration
	name in the GUIs SaveConfiguration dialog.

2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-09
	* revert to old default regarding --cff (namely implying
	--noedsources and --nooutput)
	
2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-08
	* gui: make sure to always keep trigger information
	  (OutputModuleEditor)
	* data/converter: provide --nosequences and --nomodules options in
	ModifierInstructions

2008-05-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-07
	* 'fix' problem with configuration parser, where strings
	containing '#' characters wouldn't be parsed correctly. It isn't
	pretty though ...

2008-05-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-06
	* allow for configurations to be saved even if unset tracked
	parameters are in it.

2008-05-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-23-05
	* add converter.summary.data
	* implement converter.summary.ascii

2008-04-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-04
	* changed my mind; use HLT DEVELOPMENT for the tutorial, Define
	TEST2R & TEST9R
	
2008-04-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-03
	* add db connection for TUTORIALS DB (int9r)
	
2008-04-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-02
	* fix to diff

2008-04-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-01
	* gui: bug fix for problem reported by Martin regarding import of
	pre-existing modules: didn't work for modules referenced more than
	once.
